[project]
name = "rentline-sandbox"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
    "PyJWT>=2.8.0",
    "psycopg2-binary>=2.9.12",
    "cryptography>=48.0.0",
    "supabase>=2.0.0",
    # web3 only required when on-chain PropertyToken calls are active (Phase 2)
    # "web3>=7.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
