[project]
name = "rwa-issuer-sim"
version = "0.1.0"
description = "RWA tokenization + property data service"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "web3>=6.0.0",
    "eth-account>=0.11.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "x402[evm,requests]>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
